20070501 ui/scaler/scalers.c: make sure MIN and ABS are defined
         (Release-0_8_0-branch) (Fred).
20070503 periph.c,spectrum.[ch],ula.[ch],machines/{pentagon.c,scorpion.c,
	 spec128.c,spec16.c,spec48.c}: fix IN timings and consequent fixes
	 to floating bus behaviour (fixes bug #1708597) (thanks, Pegaz and
	 Mark Woodmass) (Release-0_8_0-branch).
20070507 lib/Makefile.am: distribute autoload snapshots
         (thanks Stuart Brady and Arda Erdikmen) (Release-0_8_0-branch)
         (Fred).
20070509 snapshot.c: call machine_select() only if the machine has changed
	 (fixes bug #1701246) (thanks, Julian Wiseman) (Release-0_8_0-branch)
	 (Fred).
20070509 acinclude.m4: remove warnings about underquoted definitions
	 (Release-0_8_0-branch) (Stuart Brady).
20070510 ChangeLog,README,configure.in,man/fuse.1: doc updates for 0.8.0.1
	 release (Release-0_8_0-branch).
20070511 TAG: Release-0_8_0_1 (Release-0_8_0-branch).
20070512 ui/scaler/scalers.c: make sure ABS is correctly defined
         (Release-0_8_0-branch) (Fred).
20070512 hacking/cvs-tags: document merge to trunk (Release-0_8_0-branch).
20070512 Merge from Release-0_8_0-branch).
20070512 TAG: Release-0_8_0-merge-1
20070513 dck.h,if1.[ch],if2.h,snapshot.h,debugger/{debugger.c,disassemble.c},
         ui/{ggi/ggidisplay.c,gtk/rollback.c,xlib/xjoystick.c},z80/z80.pl:
	 fix filenames in comments (patch #1716201) (Stuart Brady).
20070513 README,Makefile.am,acinclude.m4,configure.in,settings.dat,
         sound.c,man/fuse.1,ui/options.dat: add support for using
         libsamplerate to reduce aliasing noise in beeper emulation
	 (fixes bug #1629741) (Fred).
20070513 debugger/{commandl.l,commandy.y}: fix clashes with Win32 API
	 (patch #1711412) (Stuart Brady).
20070513 dxsound.c: add synchronisation, 16-bit sound support and improved
	 error handling (patch #1713519) (Stuart Brady).
20070513 Makefile.am,configure.in,timer.c,sound/lowlevel.h: use DirectSound
	 if available (patch #1716734) (Stuart Brady).