@@ -7,11 +7,11 @@
    10 PC 0a40
    13 MC 37ce
    16 MW 37ce ff
-   16 MC 37cf
-   17 MC 37cf
-   18 MC 37cf
-   19 MC 37cf
-   20 MC 37cf
+   16 MC 37ce
+   17 MC 37ce
+   18 MC 37ce
+   19 MC 37ce
+   20 MC 37ce
    21 MC 0000
    25 MR 0000 ed
    25 MC 0001
@@ -21,11 +21,11 @@
    31 PC 0940
    34 MC 37cf
    37 MW 37cf ff
-   37 MC 37d0
-   38 MC 37d0
-   39 MC 37d0
-   40 MC 37d0
-   41 MC 37d0
+   37 MC 37cf
+   38 MC 37cf
+   39 MC 37cf
+   40 MC 37cf
+   41 MC 37cf
    42 MC 0000
    46 MR 0000 ed
    46 MC 0001
@@ -35,11 +35,11 @@
    52 PC 0840
    55 MC 37d0
    58 MW 37d0 ff
-   58 MC 37d1
-   59 MC 37d1
-   60 MC 37d1
-   61 MC 37d1
-   62 MC 37d1
+   58 MC 37d0
+   59 MC 37d0
+   60 MC 37d0
+   61 MC 37d0
+   62 MC 37d0
    63 MC 0000
    67 MR 0000 ed
    67 MC 0001
@@ -49,11 +49,11 @@
    73 PC 0740
    76 MC 37d1
    79 MW 37d1 ff
-   79 MC 37d2
-   80 MC 37d2
-   81 MC 37d2
-   82 MC 37d2
-   83 MC 37d2
+   79 MC 37d1
+   80 MC 37d1
+   81 MC 37d1
+   82 MC 37d1
+   83 MC 37d1
    84 MC 0000
    88 MR 0000 ed
    88 MC 0001
@@ -63,11 +63,11 @@
    94 PC 0640
    97 MC 37d2
   100 MW 37d2 ff
-  100 MC 37d3
-  101 MC 37d3
-  102 MC 37d3
-  103 MC 37d3
-  104 MC 37d3
+  100 MC 37d2
+  101 MC 37d2
+  102 MC 37d2
+  103 MC 37d2
+  104 MC 37d2
   105 MC 0000
   109 MR 0000 ed
   109 MC 0001
@@ -77,11 +77,11 @@
   115 PC 0540
   118 MC 37d3
   121 MW 37d3 ff
-  121 MC 37d4
-  122 MC 37d4
-  123 MC 37d4
-  124 MC 37d4
-  125 MC 37d4
+  121 MC 37d3
+  122 MC 37d3
+  123 MC 37d3
+  124 MC 37d3
+  125 MC 37d3
   126 MC 0000
   130 MR 0000 ed
   130 MC 0001
@@ -91,11 +91,11 @@
   136 PC 0440
   139 MC 37d4
   142 MW 37d4 ff
-  142 MC 37d5
-  143 MC 37d5
-  144 MC 37d5
-  145 MC 37d5
-  146 MC 37d5
+  142 MC 37d4
+  143 MC 37d4
+  144 MC 37d4
+  145 MC 37d4
+  146 MC 37d4
   147 MC 0000
   151 MR 0000 ed
   151 MC 0001
@@ -105,11 +105,11 @@
   157 PC 0340
   160 MC 37d5
   163 MW 37d5 ff
-  163 MC 37d6
-  164 MC 37d6
-  165 MC 37d6
-  166 MC 37d6
-  167 MC 37d6
+  163 MC 37d5
+  164 MC 37d5
+  165 MC 37d5
+  166 MC 37d5
+  167 MC 37d5
   168 MC 0000
   172 MR 0000 ed
   172 MC 0001
@@ -119,11 +119,11 @@
   178 PC 0240
   181 MC 37d6
   184 MW 37d6 ff
-  184 MC 37d7
-  185 MC 37d7
-  186 MC 37d7
-  187 MC 37d7
-  188 MC 37d7
+  184 MC 37d6
+  185 MC 37d6
+  186 MC 37d6
+  187 MC 37d6
+  188 MC 37d6
   189 MC 0000
   193 MR 0000 ed
   193 MC 0001
